@@ -12,7 +12,7 @@
 // `COPYING' file in the root directory.
 //
 
-sl_def(FFT_Swap, void,
+sl_def(FFT_Swap, sl__static,
        sl_glparm(cpx_t*restrict, X),
        sl_glparm(unsigned long, i),
        sl_glparm(unsigned long, j))
@@ -26,7 +26,7 @@ sl_def(FFT_Swap, void,
 }
 sl_enddef
 
-sl_def(FFT_Reverse, void,
+sl_def(FFT_Reverse, sl__static,
        sl_glparm(cpx_t*restrict, X),
        sl_glparm(unsigned long, N),
        sl_shparm(unsigned long, j))
@@ -51,35 +51,24 @@ sl_def(FFT_Reverse, void,
 }
 sl_enddef
 
-sl_def(FFT, void,
-       sl_glparm(cpx_t*restrict, X),
-       sl_glparm(unsigned long, M),
-       sl_glparm(struct work_lapses*, wl),
-       sl_glparm(const char*, wname))
+void FFT(cpx_t*restrict X, unsigned long M, struct work_lapses* wl, const char *wname)
 {
-  unsigned long N = 1 << sl_getp(M);
-  struct work_lapses *wl = sl_getp(wl);
+  unsigned long N = 1 << M;
 
   start_interval(wl, "reversal");
   sl_create(,,,N-1,,2,, FFT_Reverse,
-	    sl_glarg(cpx_t*restrict, , sl_getp(X)),
+	    sl_glarg(cpx_t*restrict, , X),
 	    sl_glarg(unsigned long, , N/2),
 	    sl_sharg(unsigned long, , 0));
   sl_sync();
   finish_interval(wl);
 
-  start_interval(wl, sl_getp(wname));
-  sl_create(,,1,sl_getp(M)+1,1,2,, FFT_1,
-	    sl_glarg(cpx_t*restrict, , sl_getp(X)),
-	    sl_glarg(unsigned long, , N/2),
-	    sl_sharg(long, , 0),
-	    sl_glarg(const void*, , sc_table));
-  sl_sync();
+  start_interval(wl, wname);
+  FFT_1(M, X, N/2, sc_table);
   finish_interval(wl);
 }
-sl_enddef
 
-sl_def(Conjugate, void, sl_glparm(cpx_t*restrict, X))
+sl_def(Conjugate, sl__static, sl_glparm(cpx_t*restrict, X))
 {
   sl_index(i);
   cpx_t *X = sl_getp(X);
@@ -88,7 +77,7 @@ sl_def(Conjugate, void, sl_glparm(cpx_t*restrict, X))
 }
 sl_enddef
 
-sl_def(Scale, void,
+sl_def(Scale, sl__static,
        sl_glparm(cpx_t*restrict, X),
        sl_glparm(unsigned long, N))
 {
@@ -100,34 +89,25 @@ sl_def(Scale, void,
 }
 sl_enddef
 
-sl_def(FFT_Inv, void,
-       sl_glparm(cpx_t*restrict, X),
-       sl_glparm(unsigned long, M),
-       sl_glparm(struct work_lapses*, wl))
+void FFT_Inv(cpx_t*restrict X, unsigned long M, struct work_lapses* wl)
 {
-  unsigned long N = 1 << sl_getp(M);
-  struct work_lapses *wl = sl_getp(wl);
+  unsigned long N = 1 << M;
 
   start_interval(wl, "conj");
   sl_create(,,,N,,,, Conjugate,
-	    sl_glarg(cpx_t*restrict, gX, sl_getp(X)));
+	    sl_glarg(cpx_t*restrict, , X));
   sl_sync();
   finish_interval(wl);
 
 
-  sl_create(,,,,,,, FFT,
-	    sl_glarg(cpx_t*restrict, gX2, sl_geta(gX)),
-	    sl_glarg(unsigned long, , sl_getp(M)),
-	    sl_glarg(struct work_lapses*, , wl),
-	    sl_glarg(const char*, , "work2"));
-  sl_sync();
+  FFT(X, M, wl, "work2");
 
   start_interval(wl, "scale");
   sl_create(,,,N,,,, Scale,
-	    sl_glarg(cpx_t*restrict, , sl_geta(gX2)),
-	    sl_glarg(unsigned long, gN, N));
+	    sl_glarg(cpx_t*restrict, , X),
+	    sl_glarg(unsigned long, , N));
   sl_sync();
   finish_interval(wl);
 
 }
-sl_enddef
+
