@@ -22,7 +22,7 @@ static const cpx_t sc_table[ MAX_N ] = {
 };
 const void* sc_table_ptr = sc_table;
 
-sl_def(FFT_2, void,
+sl_def(FFT_2, sl__static,
        sl_glparm(unsigned long, LE2),
        sl_glparm(const cpx_t* restrict, cos_sin),
        sl_glparm(cpx_t* restrict, X),
@@ -50,7 +50,7 @@ sl_def(FFT_2, void,
 }
 sl_enddef
 
-sl_def(FFT_1, void,
+sl_def(FFT_1_mt, sl__static,
        sl_glparm(cpx_t*restrict, X),
        sl_glparm(unsigned long, N2),
        sl_shparm(long, token),
@@ -72,3 +72,14 @@ sl_def(FFT_1, void,
     sl_setp(token, t);
 }
 sl_enddef
+
+static
+void FFT_1(unsigned long M, cpx_t*restrict X, unsigned long N2, const void* t)
+{
+  sl_create(,,1,M+1,1,2,, FFT_1_mt,
+	    sl_glarg(cpx_t*restrict, , X),
+	    sl_glarg(unsigned long, , N2),
+	    sl_sharg(long, , 0),
+	    sl_glarg(const void*, , t));
+  sl_sync();
+}
